Fixed the layout issues for the settings page Add one new property called docGuid which is a guid that is assigned for each document row. This is used for row selection logic

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/viewspecific/Settings.css
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/viewspecific/Settings.css
@@ -738,3 +738,6 @@ input[type=text]::-webkit-input-placeholder, input[type=text]:-moz-placeholder, 
         width: 1150px;
     }
 }
+.settingsMarginBotton{
+    margin-bottom:120px
+}
